--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -13,51 +13,10 @@
     background: transparent;
 }
 
-/*.page-wrapper {
-    top: -325px;
-    position: relative;
-}*/
 
 body {
     @include foundation-title-bar
-    .awesome, .fa {
-        font-family: FontAwesome;
-        &.double {
-            font-size:2rem;
-        }
-        &.triple {
-            font-size:3rem;
-        }
-    }
-    .header {
-        .home-logo {
-            a {
-                display: block;
-                margin-top: -25px;
-                position: relative;
-                margin-bottom: -25px;
-            }
-            img {
-                width: 140px;
-            }
-        }
-    }
-    .nav-links-row {
-        position:relative;
-        float: right;
-        .nav-links {
-            right: 0;
-            top: 1rem;
-            text-align: right;
-            > * {
-                float: right;
-            }
-            a {
-                display: inline-block;
-                margin-left: 20px;
-            }
-        }
-    }
+
     h1 {
         margin-bottom: 40px;
         margin-top: 30px;
@@ -82,6 +41,67 @@ body {
         font-size: 1.4em;
         padding: 0.6rem;
     }
+    .full-width {
+        width: 100%;
+    }
+    .global-spacing {
+        &.top {
+            margin-top: 2rem;
+        }
+        &.right {
+            margin-right: 2rem;
+        }
+        &.bottom {
+            margin-bottom: 2rem;
+        }
+        &.left {
+            margin-left: 2rem;
+        }
+    }
+
+    .awesome, .fa {
+        font-family: FontAwesome;
+        &.double {
+            font-size:2rem;
+        }
+        &.triple {
+            font-size:3rem;
+        }
+    }
+    .header {
+        .home-logo {
+            a {
+                display: block;
+                margin-top: -25px;
+                position: relative;
+                margin-bottom: -25px;
+            }
+            img {
+                width: 140px;
+            }
+        }
+        .menu-icon {
+            top:30%;
+        }
+    }
+    .nav-links-row {
+        position:relative;
+        float: right;
+
+        .nav-links {
+            right: 0;
+            top: 1rem;
+            text-align: right;
+            > * {
+                float: right;
+            }
+            a {
+                display: inline-block;
+                margin-left: 2rem;
+            }
+        }
+    }
+
     .listing {
         margin-left: 0;
         list-style-type: none;
@@ -138,4 +158,78 @@ body {
             }
         }
     }
+}
+
+
+
+
+
+
+
+
+body {
+  background: #000;
+}
+
+
+.cover {
+  position: absolute;
+  top: 107px;
+  left: 0;
+  z-index: 2;
+
+  width: 100%;
+  height: 88%;
+  background: rgba(0,0,0,0.4);
+
+  .hi {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+
+    color: $white;
+
+    font-size: 3rem;
+    text-align: center;
+
+
+    em {
+      font-style: normal;
+
+      &.hidden {
+        display: none;
+      }
+    }
+  }
+}
+
+.tv {
+  position: absolute;
+  top: 107px;
+  left: 0;
+  z-index: 1;
+
+  width: 100%;
+  height: 88%;
+
+  overflow: hidden;
+
+  .screen {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+
+    margin: auto;
+
+    opacity: 0;
+    transition: opacity .5s;
+
+    &.active {
+      opacity: 1;
+    }
+  }
 }
