--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,7 +9,7 @@
 
 
 .parallax-window {
-    min-height: 400px;
+    min-height: 300px;
     background: transparent;
 }
 
@@ -46,17 +46,54 @@ body {
     }
     .global-spacing {
         &.top {
-            margin-top: 2rem;
+            margin-top: 1rem;
         }
         &.right {
-            margin-right: 2rem;
+            margin-right: 1rem;
         }
         &.bottom {
-            margin-bottom: 2rem;
+            margin-bottom: 1rem;
         }
         &.left {
-            margin-left: 2rem;
+            margin-left: 1rem;
         }
+    }
+
+    .nav {
+        a {
+            display: inline-block;
+            border: 3px solid #173701;
+            padding: 15px;
+            border-radius: 5px;
+            font-size: 1.1rem;
+        }
+    }
+    .homepage-content {
+        top: 100%;
+        width:100%;
+        position: absolute;
+        h2 {
+            border-bottom-style: double;
+            border-top-style: double;
+            margin-top: 1rem;
+            padding-top: 1rem;
+            padding-bottom: 1rem;
+            border-bottom-color: $lightGreen;
+            border-top-color: $lightGreen;
+            border-bottom-width: 5px;
+            border-top-width: 5px;
+        }
+
+        .our-mission, .your-mission {
+            height: 600px;
+        }
+    }
+    .title-bar {
+        transition: all 500ms ease;
+    }
+    .title-bar.not-top {
+        background:$darkNeutral;
+
     }
 
     .awesome, .fa {
@@ -68,7 +105,15 @@ body {
             font-size:3rem;
         }
     }
+    #header-bar {
+        &.homepage {
+            position: fixed;
+            width: 100%;
+            z-index:1000;
+        }
+    }
     .header {
+
         .home-logo {
             a {
                 display: block;
@@ -167,20 +212,18 @@ body {
 
 
 
-body {
-  background: #000;
-}
-
-
 .cover {
   position: absolute;
-  top: 107px;
+  top: 0;
   left: 0;
-  z-index: 2;
+  z-index: -1;
+  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAABZJREFUeNpi2r9//38gYGAEESAAEGAAasgJOgzOKCoAAAAASUVORK5CYII=);
+
+
 
   width: 100%;
-  height: 88%;
-  background: rgba(0,0,0,0.4);
+  height: 100%;
+  background-color: rgba(127, 127, 127, 0.5);
 
   .hi {
     position: absolute;
@@ -206,12 +249,12 @@ body {
 
 .tv {
   position: absolute;
-  top: 107px;
+  top: 0;
   left: 0;
-  z-index: 1;
+  z-index: -2;
 
   width: 100%;
-  height: 88%;
+  height: 100%;
 
   overflow: hidden;
 
