--- a/resources/assets/sass/foundation-sites/scss/components/_title-bar.scss
+++ b/resources/assets/sass/foundation-sites/scss/components/_title-bar.scss
@@ -40,6 +40,9 @@ $titlebar-icon-spacing: 0.25rem !default;
     background: $titlebar-background;
     color: $titlebar-color;
     padding: $titlebar-padding;
+    &.transparent {
+        background: transparent;
+    }
 
     @if $global-flexbox {
       display: flex;
