--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -22,6 +22,11 @@ body {
         margin-bottom: 40px;
         margin-top: 30px;
     }
+    ul, ol {
+        li {
+            text-align: initial;
+        }
+    }
     .white {
         color: $white;
     }
