--- a/resources/assets/sass/foundation-sites/scss/_global.scss
+++ b/resources/assets/sass/foundation-sites/scss/_global.scss
@@ -52,7 +52,7 @@ $white: #fefefe !default;
 
 /// Background color of the body.
 /// @type Color
-$body-background: $white !default;
+$body-background: $white;
 
 /// Text color of the body.
 /// @type Color
