--- a/resources/assets/sass/foundation-sites/scss/_global.scss
+++ b/resources/assets/sass/foundation-sites/scss/_global.scss
@@ -56,7 +56,7 @@ $body-background: $white;
 
 /// Text color of the body.
 /// @type Color
-$body-font-color: $black !default;
+$body-font-color: $textColor;
 
 /// Font stack of the body.
 /// @type List
