--- a/resources/assets/sass/foundation-sites/scss/components/_title-bar.scss
+++ b/resources/assets/sass/foundation-sites/scss/components/_title-bar.scss
@@ -8,7 +8,7 @@
 
 /// Background color of a title bar.
 /// @type Color
-$titlebar-background: $darkNeutral;
+$titlebar-background: $navigationBackgroundColor;
 
 /// Color of text inside a title bar.
 /// @type Color
