--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -17,7 +17,7 @@
 
 body {
     @include foundation-title-bar
-
+    background: $bodyBackgroundColor;
     h1 {
         margin-bottom: 40px;
         margin-top: 30px;
@@ -30,9 +30,7 @@ body {
     .white {
         color: $white;
     }
-    .callout {
-        box-shadow: 0 10px 6px -6px #777;
-    }
+
     .hidden {
         display: none;
     }
@@ -95,8 +93,8 @@ body {
             margin-top: 1rem;
             padding-top: 1rem;
             padding-bottom: 1rem;
-            border-bottom-color: $lightGreen;
-            border-top-color: $lightGreen;
+            border-bottom-color: $hintColor;
+            border-top-color: $hintColor;
             border-bottom-width: 5px;
             border-top-width: 5px;
         }
@@ -108,7 +106,7 @@ body {
         z-index: 1;
     }
     .title-bar.not-top {
-        background:$darkNeutral;
+        background:$titleBarOffset;
 
     }
     .secondary-nav {
@@ -174,45 +172,39 @@ body {
         margin-left: 0;
         list-style-type: none;
         > li {
-            border: 1px solid $darkGreen;
+            border: 1px solid $topLevelPaneBorderColor;
             margin-bottom: 20px;
             padding: 10px;
-            background: $white;
-            border-radius:6px;
-            box-shadow: 0 10px 6px -6px #777;
+            background: $topLevelPaneHeaderBackgroundColor;
             &.alert {
                 position: relative;
                 top: -35px;
                 margin-bottom: 0;
-                background: $lightNeutral;
-                color: white;
+                background: $thirdLevelPaneBodyBackgroundColor;
+                //color: white;
                 border: white 1px solid;
                 &.overdue {
-                    background:$darkNeutral;
+                    background-color: $secondLevelPaneHeaderBackgroundColor;
                 }
             }
 
             > .card {
-                border-left: 5px solid $darkGreen;
+                border-left: 5px solid $topLevelPaneBorderColor;
                 min-height: 50px;
                 .plan {
-                    margin-bottom: 20px;
-                    border-left: 5px solid #5b7632;
-                    margin-top: 20px;
+                    margin-top: 10px;
+                    background: $planBackgroundColor;
+                    width: 80%;
                 }
                 .plan-inner {
                     margin-left: 10px;
-                    background: #e9e8e4;
                     width: 80%;
                     padding: 15px;
-                    color: #807c79;
-                    border: 2px solid white;
-                    border-radius: 5px;
                 }
                 .maintenance-complete {
                     display: block;
-                    right: 12px;
-                    bottom: 0;
+                    right: 0px;
+                    bottom: 15px;
                     position: absolute;
                 }
                 .summary {
@@ -223,9 +215,6 @@ body {
                     transition: all 0.3s ease;
                     &:hover {
                         margin-left: 17px;
-                    }
-                    .plan {
-                        margin-bottom:20px;
                     }
                     span.awesome {
                         float: right;
@@ -248,6 +237,63 @@ body {
         a {
             color: white;
         }
+    }
+
+    .panes {
+        .column {
+            margin-bottom: 2rem;
+        }
+        .listing:not(.missions) {
+            margin-bottom: 0;
+        }
+        li {
+            border: 1px solid #173701;
+            padding: 10px;
+            background: #fefefe;
+            margin-bottom: 0;
+            border-radius: 0;
+        }
+        .inner-column {
+            border: 1px solid $topLevelPaneBorderColor;
+            border-radius: 0;
+            position: relative;
+            transition: all 400ms ease;
+            &.active-child {
+                transform: scale(1.1,1.1);
+                color: $textColorActive;
+                .completeness {
+                    background: $hintColor;
+                }
+            }
+        }
+        .title {
+            background-color: $topLevelPaneHeaderBackgroundColor;
+            text-align: center;
+            padding:1rem;
+            color: $white;
+        }
+        .completeness {
+            background-color: $topLevelPaneBodyBackgroundColor;
+            text-align: center;
+            font-size:6rem;
+            padding:1rem;
+        }
+        .objectives {
+            display: none;
+        }
+        li.alert {
+            background-color: $thirdLevelPaneBodyBackgroundColor;
+            top: 0;
+            &.overdue {
+                background-color: $secondLevelPaneHeaderBackgroundColor;
+                top: 0;
+            }
+        }
+        .start {
+            font-size: 2rem;
+        }
+
+
     }
 }
 
