--- a/resources/assets/sass/foundation-sites/scss/components/_menu-icon.scss
+++ b/resources/assets/sass/foundation-sites/scss/components/_menu-icon.scss
@@ -1,6 +1,6 @@
 @mixin foundation-menu-icon {
   .menu-icon {
-    @include hamburger($color: $darkGreen, $color-hover: $lightGreen);
+    @include hamburger($color: $hintColor, $color-hover: $hintColor);
   }
 
   .menu-icon.dark {
