--- a/resources/assets/sass/foundation-sites/scss/typography/_base.scss
+++ b/resources/assets/sass/foundation-sites/scss/typography/_base.scss
@@ -61,7 +61,7 @@ $header-sizes: (
 
 /// Color of headers.
 /// @type Color
-$header-color: inherit !default;
+$header-color: $currentHeaderColor;
 
 /// Line height of headers.
 /// @type Number
