--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,8 @@
 /*
  * Green scheme
  */
+/* Colours */
+/* Globals */
 /* Cobalt Blue Scheme */
 /* Types of coloured elements */
 /**
@@ -1714,7 +1716,7 @@ h6 {
   font-family: "Roboto Condensed", sans-serif;
   font-weight: normal;
   font-style: normal;
-  color: #fff;
+  color: #002F6F;
   text-rendering: optimizeLegibility;
   margin-top: 0;
   margin-bottom: 0.5rem;
@@ -2407,7 +2409,7 @@ select {
     clear: both; }
   .breadcrumbs li {
     float: left;
-    color: #fff;
+    color: #002F6F;
     font-size: 0.6875rem;
     cursor: default;
     text-transform: uppercase; }
@@ -2536,8 +2538,8 @@ select {
   border: 1px solid rgba(10, 10, 10, 0.25);
   border-radius: 0;
   position: relative;
-  color: #fff;
-  background-color: #0048ab; }
+  color: #002F6F;
+  background-color: #fefefe; }
   .callout > :first-child {
     margin-top: 0; }
   .callout > :last-child {
@@ -4448,7 +4450,7 @@ table.hover tbody tr:nth-of-type(even):hover {
   background: transparent; }
 
 body {
-  background: #6091D5; }
+  background: #e9e9e9; }
   body .title-bar {
     background: #204980;
     color: #fefefe;
@@ -4572,50 +4574,6 @@ body {
       body .nav-links-row .nav-links a {
         display: inline-block;
         margin-left: 2rem; }
-  body .listing {
-    margin-left: 0;
-    list-style-type: none; }
-    body .listing > li {
-      border: 1px solid #fff;
-      margin-bottom: 20px;
-      padding: 10px;
-      background: #002F6F; }
-      body .listing > li.alert {
-        position: relative;
-        top: -35px;
-        margin-bottom: 0;
-        background: #204980;
-        border: white 1px solid; }
-        body .listing > li.alert.overdue {
-          background-color: #002F6F; }
-      body .listing > li > .card {
-        border-left: 5px solid #fff;
-        min-height: 50px; }
-        body .listing > li > .card .plan {
-          margin-top: 10px;
-          background: #6091D5;
-          width: 80%; }
-        body .listing > li > .card .plan-inner {
-          margin-left: 10px;
-          width: 80%;
-          padding: 15px; }
-        body .listing > li > .card .maintenance-complete {
-          display: block;
-          right: 0px;
-          bottom: 15px;
-          position: absolute; }
-        body .listing > li > .card .summary {
-          margin-left: 10px;
-          padding-top: 14px;
-          position: relative;
-          padding-bottom: 14px;
-          transition: all 0.3s ease; }
-          body .listing > li > .card .summary:hover {
-            margin-left: 17px; }
-          body .listing > li > .card .summary span.awesome {
-            float: right;
-            margin-top: -10px;
-            margin-right: 15px; }
   body footer {
     background: #807c79;
     color: white;
@@ -4625,18 +4583,12 @@ body {
       top: 45%; }
     body footer a {
       color: white; }
+  body .callout-inner {
+    border: 1px solid rgba(10, 10, 10, 0.25); }
   body .panes .column, body .panes .columns {
     margin-bottom: 2rem; }
-  body .panes .listing:not(.missions) {
-    margin-bottom: 0; }
-  body .panes li {
-    border: 1px solid #173701;
-    padding: 10px;
-    background: #fefefe;
-    margin-bottom: 0;
-    border-radius: 0; }
   body .panes .inner-column {
-    border: 1px solid #fff;
+    border: 1px solid #002F6F;
     border-radius: 0;
     position: relative;
     transition: all 400ms ease; }
@@ -4655,16 +4607,73 @@ body {
     text-align: center;
     font-size: 6rem;
     padding: 1rem; }
-  body .panes .objectives {
-    display: none; }
-  body .panes li.alert {
-    background-color: #204980;
-    top: 0; }
-    body .panes li.alert.overdue {
-      background-color: #002F6F;
-      top: 0; }
+  body .panes .listing-wrapper {
+    padding: 15px;
+    background: #fefefe; }
+  body .panes .listing {
+    counter-reset: li;
+    margin-left: 0;
+    padding-left: 0;
+    padding: 15px;
+    background-color: #e9e9e9;
+    margin-bottom: 0;
+    border: 1px solid rgba(10, 10, 10, 0.25); }
+  body .panes .listing > li {
+    position: relative;
+    margin: 0 0 6px 2em;
+    padding: 4px 8px;
+    list-style: none;
+    border-bottom: 2px solid #d3d3d3; }
+  body .panes .listing > li:last-child {
+    border-bottom: none; }
+  body .panes .card {
+    margin-top: 20px;
+    margin-bottom: 20px; }
+    body .panes .card .objective-title {
+      line-height: 1rem; }
+      body .panes .card .objective-title a {
+        color: #000; }
+    body .panes .card .plan {
+      color: #807c79; }
+  body .panes .maintenance-complete-form {
+    float: right; }
+  body .panes .maintenance-complete {
+    background: transparent;
+    border: none;
+    font-size: 2.5rem;
+    color: #002F6F;
+    float: right; }
+  body .panes .listing > li:before {
+    content: counter(li);
+    counter-increment: li;
+    position: absolute;
+    top: -2px;
+    left: -2.3em;
+    box-sizing: border-box;
+    width: 2em;
+    margin-right: 8px;
+    padding: 4px;
+    border: 2px solid #d3d3d3;
+    color: #807c79;
+    background: #fefefe;
+    font-weight: bold;
+    text-align: center;
+    border-radius: 20px;
+    top: 26%;
+    width: 37px; }
+  body .panes .alert .fa {
+    color: #807c79;
+    float: right;
+    font-size: 2.5em;
+    margin-right: 3px; }
+  body .panes .alert.overdue .fa {
+    color: red; }
   body .panes .start {
     font-size: 2rem; }
+  body .panes .end {
+    display: none; }
+  body .panes .complete {
+    color: #008000; }
 
 .cover {
   position: absolute;
