--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -10,8 +10,9 @@
 
 
 .parallax-window {
-    min-height: 300px;
+    min-height: 500px;
     background: transparent;
+    position: relative;
 }
 
 
@@ -62,13 +63,13 @@ body {
         }
     }
     .active {
-        background: #173701;
+        background: $navigationBackgroundItemActiveColor;
         color: #fff;
     }
     .nav {
         a {
             display: inline-block;
-            border: 3px solid #173701;
+            border: 3px solid $navigationBackgroundItemActiveColor;
             padding: 15px;
             border-radius: 5px;
             font-size: 1.1rem;
@@ -81,6 +82,10 @@ body {
             padding: 15px;
             font-size: 1.1rem;
             transition: all 500ms ease;
+            color: $hintColor;
+            &.active {
+                color: $white;
+            }
         }
     }
     .homepage-content {
@@ -93,22 +98,25 @@ body {
             margin-top: 1rem;
             padding-top: 1rem;
             padding-bottom: 1rem;
-            border-bottom-color: $hintColor;
-            border-top-color: $hintColor;
+            border-bottom-color: $cobaltBlue1;
+            border-top-color: $cobaltBlue1;
             border-bottom-width: 5px;
             border-top-width: 5px;
+            color: $white;
         }
-
     }
+
     .title-bar {
         transition: all 500ms ease;
         position: relative;
         z-index: 1;
     }
+
     .title-bar.not-top {
         background:$titleBarOffset;
 
     }
+
     .secondary-nav {
         background: white;
         height: 55px;
@@ -126,6 +134,7 @@ body {
             font-size:3rem;
         }
     }
+
     #header-bar {
         &.homepage {
             position: fixed;
@@ -133,6 +142,7 @@ body {
             z-index:1000;
         }
     }
+
     .header {
 
         .home-logo {
@@ -150,6 +160,7 @@ body {
             top:30%;
         }
     }
+
     .nav-links-row {
         position:relative;
         float: right;
@@ -168,63 +179,38 @@ body {
         }
     }
 
-    // .listing {
-    //     margin-left: 0;
-    //     list-style-type: none;
-    //     > li {
-    //         border: 1px solid $topLevelPaneBorderColor;
-    //         margin-bottom: 20px;
-    //         padding: 10px;
-    //         background: $topLevelPaneHeaderBackgroundColor;
-    //         &.alert {
-    //             position: relative;
-    //             top: -35px;
-    //             margin-bottom: 0;
-    //             background: $thirdLevelPaneBodyBackgroundColor;
-    //             //color: white;
-    //             border: white 1px solid;
-    //             &.overdue {
-    //                 background-color: $secondLevelPaneHeaderBackgroundColor;
-    //             }
-    //         }
-    //
-    //         > .card {
-    //             border-left: 5px solid $topLevelPaneBorderColor;
-    //             min-height: 50px;
-    //             .plan {
-    //                 margin-top: 10px;
-    //                 background: $planBackgroundColor;
-    //                 width: 80%;
-    //             }
-    //             .plan-inner {
-    //                 margin-left: 10px;
-    //                 width: 80%;
-    //                 padding: 15px;
-    //             }
-    //             .maintenance-complete {
-    //                 display: block;
-    //                 right: 0px;
-    //                 bottom: 15px;
-    //                 position: absolute;
-    //             }
-    //             .summary {
-    //                 margin-left: 10px;
-    //                 padding-top: 14px;
-    //                 position: relative;
-    //                 padding-bottom: 14px;
-    //                 transition: all 0.3s ease;
-    //                 &:hover {
-    //                     margin-left: 17px;
-    //                 }
-    //                 span.awesome {
-    //                     float: right;
-    //                     margin-top: -10px;
-    //                     margin-right: 15px;
-    //                 }
-    //             }
-    //         }
-    //     }
-    // }
+    .breadcrumbs {
+        a {
+            color: $darkGrey;
+        }
+    }
+
+    .icon-container {
+        text-align: center;
+        top: 200px;
+        position: relative;
+        height: 100%;
+        color: #002F6F;
+        .fa {
+            font-size: 7rem;
+        }
+        &.primary {
+            top:110px;
+        }
+    }
+
+    .overlay {
+        height: 100%;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        background: rgba(0,0,0,0.8);
+        text-align: center;
+        .overlay-inner {
+            position: relative;
+            top: 25%;
+        }
+    }
 
     footer {
         background: #807c79;
@@ -242,23 +228,22 @@ body {
     .callout-inner {
         border: 1px solid rgba(10, 10, 10, 0.25);
     }
+    .delete {
+        .fa {
+            font-size: 3rem;
+            padding: 10px;
+            margin-bottom: 1rem;
+        }
+        form {
+            margin-top: -45px;
+        }
+    }
 
     .panes {
         .column {
             margin-bottom: 2rem;
         }
 
-
-        // .listing:not(.missions) {
-        //     margin-bottom: 0;
-        // }
-        // li {
-        //     border: 1px solid #173701;
-        //     padding: 10px;
-        //     background: #fefefe;
-        //     margin-bottom: 0;
-        //     border-radius: 0;
-        // }
         .inner-column {
             border: 1px solid $cobaltBlue4;
             border-radius: 0;
@@ -268,7 +253,7 @@ body {
                 transform: scale(1.1,1.1);
                 color: $textColorActive;
                 .completeness {
-                    background: $hintColor;
+                    background: $cobaltBlue1;
                 }
             }
         }
